[gd_scene load_steps=10 format=3 uid="uid://bxghgkd3frxvc"]

[ext_resource type="Script" uid="uid://b030rc3dyyfhf" path="res://Scripts/City/city_2.gd" id="1_dkhk4"]
[ext_resource type="Texture2D" uid="uid://dmabswb266g3w" path="res://Asset/Town/gas_station.png" id="1_ix2cc"]
[ext_resource type="Texture2D" uid="uid://bmnklythyq861" path="res://Asset/cursor2.png" id="2_4mg4m"]
[ext_resource type="PackedScene" uid="uid://c3y3l70s3qxd0" path="res://Scenes/NPC'S/npc1.tscn" id="3_b8h5g"]
[ext_resource type="Texture2D" uid="uid://bihqkeo07pvo4" path="res://Asset/cursor3.png" id="3_bw45c"]
[ext_resource type="PackedScene" uid="uid://0vus5a83p0cp" path="res://Scenes/NPC'S/npc2.tscn" id="6_cvwve"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48o7f"]
size = Vector2(96, 662)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_es1iw"]
size = Vector2(220.125, 121)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fiev"]
size = Vector2(259, 197)

[node name="City2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dkhk4")
hover_cursor = ExtResource("2_4mg4m")
hover_cursor2 = ExtResource("3_bw45c")

[node name="ChurchRuin" type="Sprite2D" parent="."]
position = Vector2(581.5, 326.5)
scale = Vector2(0.757162, 0.645508)
texture = ExtResource("1_ix2cc")

[node name="NPCS" type="Node2D" parent="."]

[node name="Player2" parent="NPCS" instance=ExtResource("3_b8h5g")]
position = Vector2(32, 76)
scale = Vector2(1.64, 2.4)

[node name="npc2" parent="NPCS" instance=ExtResource("6_cvwve")]
position = Vector2(540, 426)
scale = Vector2(2.24612, 1.75888)

[node name="Areas" type="Node2D" parent="."]

[node name="ChangeCity" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/ChangeCity"]
position = Vector2(43, 321)
shape = SubResource("RectangleShape2D_48o7f")

[node name="ChangeCity2" type="Area2D" parent="Areas"]
position = Vector2(1067, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/ChangeCity2"]
position = Vector2(43, 321)
shape = SubResource("RectangleShape2D_48o7f")

[node name="Entrance" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Entrance"]
position = Vector2(594.125, 326.5)
shape = SubResource("RectangleShape2D_es1iw")

[node name="Entrance2" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Entrance2"]
position = Vector2(926.5, 401.5)
shape = SubResource("RectangleShape2D_1fiev")

[connection signal="input_event" from="Areas/ChangeCity" to="." method="_on_change_city_input_event"]
[connection signal="mouse_entered" from="Areas/ChangeCity" to="." method="_on_change_city_mouse_entered"]
[connection signal="mouse_exited" from="Areas/ChangeCity" to="." method="_on_change_city_mouse_exited"]
[connection signal="input_event" from="Areas/ChangeCity2" to="." method="_on_change_city_2_input_event"]
[connection signal="mouse_entered" from="Areas/ChangeCity2" to="." method="_on_change_city2_mouse_entered"]
[connection signal="mouse_exited" from="Areas/ChangeCity2" to="." method="_on_change_city2_mouse_exited"]
[connection signal="input_event" from="Areas/Entrance" to="." method="_on_entrance_input_event"]
[connection signal="mouse_entered" from="Areas/Entrance" to="." method="_on_entrance_mouse_entered"]
[connection signal="mouse_exited" from="Areas/Entrance" to="." method="_on_entrance_mouse_exited"]
[connection signal="input_event" from="Areas/Entrance2" to="." method="_on_entrance_2_input_event"]
[connection signal="mouse_entered" from="Areas/Entrance2" to="." method="_on_entrance_2_mouse_entered"]
[connection signal="mouse_exited" from="Areas/Entrance2" to="." method="_on_entrance_2_mouse_exited"]
